# finnhubrs

./: .gitignore  .openapi-generator-ignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/: openapi.md
.openapi-generator/: FILES
api/: openapi.yaml
docs/: AggregateIndicators.md  AiChatBody.md  AiChatMessage.md  AiChatResponse.md  AirlinePriceIndex.md  AirlinePriceIndexData.md  BankBranchData.md  BankBranchRes.md  BasicFinancials.md  BondCandles.md  BondProfile.md  BondTickData.md  BondYieldCurve.md  BondYieldCurveInfo.md  BreakdownItem.md  Company.md  CompanyEarningsQualityScore.md  CompanyEarningsQualityScoreData.md  CompanyEsg.md  CompanyEsg2.md  CompanyExecutive.md  CompanyNews.md  CompanyNewsStatistics.md  CompanyProfile.md  CompanyProfile2.md  CongressionalTrading.md  CongressionalTransaction.md  CountryMetadata.md  CovidInfo.md  CryptoCandles.md  CryptoProfile.md  CryptoSymbol.md  DefaultApi.md  Development.md  Dividends.md  Dividends2.md  Dividends2Info.md  DocumentResponse.md  EarningRelease.md  EarningResult.md  (+137 more)
examples/: company_profile2.rs
src/apis/: configuration.rs  default_api.rs
src/models/: aggregate_indicators.rs  ai_chat_body.rs  ai_chat_message.rs  ai_chat_response.rs  airline_price_index.rs  airline_price_index_data.rs  bank_branch_data.rs  bank_branch_res.rs  basic_financials.rs  bond_candles.rs  bond_profile.rs  bond_tick_data.rs  bond_yield_curve.rs  bond_yield_curve_info.rs  breakdown_item.rs  company.rs  company_earnings_quality_score.rs  company_earnings_quality_score_data.rs  company_esg.rs  (+158 more)
