[package]
name = "finnhubrs"
version = "0.0.1"
authors = ["hlts2"]
description = "Rust client library for Finnhub API"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/hlts2/finnhubrs"
readme = "README.md"
keywords = ["finnhub", "api", "stock", "finance", "async"]
categories = ["api-bindings", "finance"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
url = "2.5.8"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
